Header con título

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <title>El Mundo que viene</title>
     </head>
     <body>
-        <p> </p>
+        <header>
+            <h1>"El Mundo que viene"</h1>
+        </header>
     </body>
 </html>
