Header y nav hechos

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <script>
-       </script>
-       <link rel="stylesheet" href=""> <!-- Tipo de archivo y url -->
+        </script>
+        <link rel="stylesheet" href="CSS/principal.css"> <!-- Tipo de archivo y url -->
         <meta charset="UTF-8" >
         <meta name="author" content="Javier García T.">
         <style>
@@ -12,8 +12,16 @@
         <title>El Mundo que viene</title>
     </head>
     <body>
+        <!-- Cabecera de la páginas -->
         <header>
             <h1>"El Mundo que viene"</h1>
+            <nav>
+                <a class="active" href="index.html">Inicio</a>
+                <a href="noticiasrel.html">Noticias relacionadas</a>
+                <a href="aboutme.html">Sobre mi</a>
+                <a  href="login.html">Registrarse</a>
+            </nav>
         </header>
+        <!-- Menú de navegación de la páginas -->
     </body>
 </html>
