--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <script>
         </script>
         <link rel="stylesheet" href="CSS/principal.css"> <!-- Tipo de archivo y url -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- para los iconos de Linkedin... -->
         <meta charset="UTF-8" >
         <meta name="author" content="Javier García T.">
         <style>
@@ -15,13 +16,56 @@
         <!-- Cabecera de la páginas -->
         <header>
             <h1>"El Mundo que viene"</h1>
+            <!-- Menú de navegación de la páginas -->
             <nav>
                 <a class="active" href="index.html">Inicio</a>
                 <a href="noticiasrel.html">Noticias relacionadas</a>
-                <a href="aboutme.html">Sobre mi</a>
+                <a href="aboutme.html">Sobre mí</a>
                 <a  href="login.html">Registrarse</a>
             </nav>
         </header>
-        <!-- Menú de navegación de la páginas -->
+         <div class="content">
+        <section>
+            <p>HOla</p>
+
+        </section>
+        <article>
+            <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc.</p>
+
+        </article>
+        </div>
+        <aside>
+            <a class="twitter-timeline" href="https://twitter.com/technews_today?ref_src=twsrc%5Etfw" data-tweet-limit="1">Tweets by technews_today</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+        </aside>
+        <footer>
+            <div class="justify">
+                <h6>Sobre</h6>
+                <br/>
+                <p >Proyecto Web Individual de Javier García Taboada, hecho con HTML, CSS y JavaScript.</p>
+            </div>
+            <div>
+                <h6>Categorías</h6>
+                <br/>
+                <ul >
+                    <li><a href="index.html">Home</a></li>
+                    <li>
+                <a href="noticiasrel.html">Noticias relacionadas</a>
+                    </li>
+                    <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
+                    <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
+                    <li><a href="http://scanfcode.com/category/android/">Android</a></li>
+                    <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
+                </ul>
+            </div>
+
+            <div>
+                
+            <h6>Redes Sociales</h6>
+                <br/>
+                <a target="_blank" href="https://www.linkedin.com/in/javiergt/" class="fa fa-linkedin"></a>
+                <a target="_blank" href="https://github.com/javierckr" class="fa fa-github"></a>
+                <a href="#" class="fa fa-twitter"></a>
+            </div>
+        </footer>
     </body>
 </html>
