Index.html terminado

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </aside>
         <footer>
             <div class="justify">
-                <h6>Sobre</h6>
+                <h6>Créditos</h6>
                 <br/>
                 <p >Proyecto Web Individual de Javier García Taboada, hecho con HTML, CSS y JavaScript.</p>
             </div>
@@ -51,10 +51,7 @@
                     <li>
                 <a href="noticiasrel.html">Noticias relacionadas</a>
                     </li>
-                    <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
-                    <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
-                    <li><a href="http://scanfcode.com/category/android/">Android</a></li>
-                    <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
+                    <li><a href="aboutme.html">Sobre mí</a></li>
                 </ul>
             </div>
 
