--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </article>
         </div>
         <aside>
-            <a class="twitter-timeline" href="https://twitter.com/technews_today?ref_src=twsrc%5Etfw" data-tweet-limit="1">Tweets by technews_today</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+            <a class="twitter-timeline" data-lang="es" data-height="500" data-theme="dark" href="https://twitter.com/technews_today?ref_src=twsrc%5Etfw">Tweets by technews_today</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
         </aside>
         <footer>
             <div class="justify">
