Corregidos los estilos responsive añadido breadcrumb

--- a/login.html
+++ b/login.html
@@ -24,6 +24,11 @@
                 <a  class="active" href="login.html">Registrarse</a>
             </nav>
         </header>
+        <!-- Breadcurmb -->
+        <ul class="breadcrumb">
+            <li><a href="index.html">Inicio</a></li>
+            <li>Registrase</li>
+        </ul>
         <section >
             <form action="/action_page.php">
                 <label for="nom">Name</label><br>
