--- a/login.html
+++ b/login.html
@@ -31,20 +31,14 @@
         </ul>
         <section >
             <form action="/action_page.php">
-                <label for="nom">Name</label><br>
+                <label for="nom">Nombre</label><br>
                 <input type="text" id="nom" name="nom" value="Nombre"><br>
                 <label for="ema">Email</label><br>
-                <input type="email" id="ema" name="ema" value="example@example.com"><br><br>
-                <label for="tel">Name</label><br>
-                <input type="tel" id="tel" name="tel" value="+34 666 666 666"><br>
-                <label for="age">Age</label><br>
-                <input type="number" id="age" name="age" value="33"><br>
-                <label for="car">Career</label><br>
-                <select id="car" name="car">
-                    <option value="matematicas">Matemáticas</option>
-                    <option value="fisica">Física</option>
-                    <option value="quimica">Química</option>
-                </select><br>
+                <input type="email" id="ema" name="ema" value="example@example.com"><br>
+                <label for="dni">DNI</label><br>
+                <input type="text" id="dni" name="dni" value="xxxxxxxx"><br>
+                <label for="age">Fecha de nacimiento</label><br>
+                <input type="date" id="age" name="age" ><br>
                 <button type="submit" value="Submit">Submit </button>
             </form>
         </section>
