Trabajando en aboutme

--- a/aboutme.html
+++ b/aboutme.html
@@ -29,9 +29,41 @@
             <li><a href="index.html">Inicio</a></li>
             <li>Sobre mí</li>
         </ul>
-        <section class="content">
-            <p>hey</p>
+        <section class="profile">
+            <img src="../PUBLIC/picture.png" alt="Profile" >
+            <h1>Javier García Taboada</h1>
+            <h3>Técnico Superior en Administración de Sistemas Informáticos en Red y estudiante de Ingeniería Informática </h3>
         </section>
+        <section class="content">
+            <h1>Sobre mí</h1>
+            <p>Hola, soy Javier García. Técnico Superior en Administración de Sistemas Informáticos en Red y estudiante de Ingeniería Informática.</p>
+            <br/>
+            <p>Me gusta todo lo relacionado con la tecnología y también el deporte, practico natación y estoy en el equipo Máster del club de natación Madrid Moscardó.</p>
+            <p>También me gusta el software libre y Linux, suelo probar distintas distribuciones de linux, actualmente uso KDE neon, que es como Kubuntu(Ubuntu con KDE) pero con KDE más actualizado.</p>
+        </section>
+        <aside>
+            <h1>Información Básica</h1>
+<table>
+<tbody>
+  <tr>
+    <td>EDAD:</td>
+    <td>21</td>
+  </tr>
+  <tr>
+    <td>EMAIL:</td>
+    <td>holajao23@gmail.com</td>
+  </tr>
+  <tr>
+    <td>DIRECCIÓN: &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</td>
+    <td>Madrid, España</td>
+  </tr>
+  <tr>
+    <td>IDIOMAS:</td>
+    <td>Español, Inglés</td>
+  </tr>
+</tbody>
+</table>
+        </aside>
 
         <footer>
             <div class="justify">
