--- a/aboutme.html
+++ b/aboutme.html
@@ -30,7 +30,7 @@
             <li>Sobre mí</li>
         </ul>
         <section class="profile">
-            <img src="../PUBLIC/picture.png" alt="Profile" >
+            <img src="PUBLIC/picture.png" alt="Profile" >
             <h1>Javier García Taboada</h1>
             <h3>Técnico Superior en Administración de Sistemas Informáticos en Red y estudiante de Ingeniería Informática </h3>
         </section>
@@ -65,6 +65,33 @@
 </table>
         </aside>
 
+        <div class="clear"></div>
+            <section>
+                <h1>Habilidades</h1>
+                <p>HTML</p>
+<div class="container">
+  <div class="skills html">80%</div>
+</div>
+
+<p>CSS</p>
+<div class="container">
+  <div class="skills css">80%</div>
+</div>
+
+<p>JavaScript</p>
+<div class="container">
+  <div class="skills js">45%</div>
+</div>
+
+<p>PHP</p>
+<div class="container">
+  <div class="skills php">60%</div>
+</div>
+<p>MySql</p>
+<div class="container">
+  <div class="skills mysql">60%</div>
+</div>
+            </section>
         <footer>
             <div class="justify">
                 <h6>Créditos</h6>
