Fata pagina de noticias

--- a/index.html
+++ b/index.html
@@ -24,15 +24,41 @@
                 <a  href="login.html">Registrarse</a>
             </nav>
         </header>
-         <div class="content">
-        <section>
-            <p>HOla</p>
+        <div class="content">
+            <section>
+                <p>Estamos en un mundo en el que la tecnología crece exponencialmente.
+                Podemos ver estos cambios en cualquier parte de este planeta, ya sea en el ámbito social, tecnológico, político…</p>
+                <p>En las últimas décadas, hemos desarrollado una gran cantidad de tecnologías y podemos ver que desde la última revolución, el ritmo de la perfección tecnológica ha ido disminuyendo.</p>
+                <p>Uno de los beneficios que nos trae el avance tecnológico es el uso de tecnologías ambientales, que es un arma de doble filo porque nos proporcionan electricidad, como turbinas eólicas y paneles solares, sin dañar el ecosistema. Además de los beneficios ya mencionados, también tiene beneficios económicos porque reduce el consumo de materias primas.</p>
+                <p>Otra tecnología que está surgiendo este año es la impresión 3D.
+                Aunque el tiempo para fabricar objetos sigue siendo exagerado, gracias a esta tecnología las personas pueden construir las primeras casas y crear implantes médicos como huesos, ingeniería como alas de avión o piezas de automóvil.
+                La tecnología holográfica parece haber aparecido por primera vez en 1948.</p>
+                <a href="noticiasrel.html#rl">
+                    <div class="hoverableimg">
+                        <img src="PUBLIC/1.jpg" alt="Noticia 1">
+                        <div class="overlay">
+                            <div class="text">Realidad Virtual</div>
+                        </div>
+                </a>
+                    </div>
+                    <a href="noticiasrel.html#va">
+                        <div class="hoverableimg">
+                            <img src="PUBLIC/2.jpg" alt="Noticia 2">
+                            <div class="overlay">
+                                <div class="text">Vehículos Autónomos</div>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="noticiasrel.html#iot">
+                        <div class="hoverableimg">
+                            <img src="PUBLIC/3.jpg" alt="Noticia 3">
+                            <div class="overlay">
+                                <div class="text">Internet of Things</div>
+                            </div>
+                        </div>
+                    </a>
+            </section>
 
-        </section>
-        <article>
-            <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc.</p>
-
-        </article>
         </div>
         <aside>
             <a class="twitter-timeline" data-lang="es" data-height="500" data-theme="dark" href="https://twitter.com/technews_today?ref_src=twsrc%5Etfw">Tweets by technews_today</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
@@ -49,15 +75,15 @@
                 <ul >
                     <li><a href="index.html">Home</a></li>
                     <li>
-                <a href="noticiasrel.html">Noticias relacionadas</a>
+                        <a href="noticiasrel.html">Noticias relacionadas</a>
                     </li>
                     <li><a href="aboutme.html">Sobre mí</a></li>
                 </ul>
             </div>
 
             <div>
-                
-            <h6>Redes Sociales</h6>
+
+                <h6>Redes Sociales</h6>
                 <br/>
                 <a target="_blank" href="https://www.linkedin.com/in/javiergt/" class="fa fa-linkedin"></a>
                 <a target="_blank" href="https://github.com/javierckr" class="fa fa-github"></a>
