--- a/noticiasrel.html
+++ b/noticiasrel.html
@@ -33,24 +33,46 @@
                 <h1>Realidad Virtual</h1>
                 <p>La realidad virtual es un espacio que se asemeja a un entorno real que percibimos a través de un tipo de casco o gafas especiales que sellan totalmente el exterior con una lente para cada ojo que enfocan a la pantalla que nos hace percibir el entorno no tangible. Se podría decir que esta tecnología lleva existiendo desde los años 90 con productos como las VirtualBoy de Nintendo, se puede ver en la Figura 1,  aunque éstas fracasaron estrepitosamente debido a que la tecnología de entonces no permitía que la idea se llevara a cabo de forma eficaz. En 2013 una compañía llamada Oculus intentó de nuevo llevar a cabo esta idea orientada al público gamer a través de la plataforma kickstarter con su Oculus Rift Development Kit 1 que se puede ver en la figura 2.
                 Fue un éxito total, recaudando 250.000 dólares en las primeras 4 horas que estuvo publicado y superando con creces su objetivo de financiación. Empresas como HTC y la misma Oculus comenzaron a desarrollar unos controladores que fueran inmersivos para VR, se pueder ver en la figura 3 (ya que antes se usaban mandos de videoconsola normales), consiguiendo así una inmersión mucho más realista y convincente. Sony también creó las PlayStation VR compatibles con la PS4, que se han convertido en las gafas de VR más vendidas de la historia, superando los 5 millones de unidades vendidas. Hoy en día, se han abaratado mucho los costes y ha mejorado mucho la fiabilidad, el rendimiento  y las tecnologías de estos dispositivos. Las gafas de VR como las Oculus Quest 2 se pueden ver en la figura 4, lanzadas hace unos meses, ofrecen una experiencia de gran calidad sin ningún tipo de cables ni sensores externos por tan solo 350€, y son el estándar actual en el mundo del VR. Hace escasos 2 años, las gafas VR estándar eran las Oculus Rift, que costaban casi 600€.</p>
+                <p>Aunque estas tecnologías fueran desarrolladas originalmente para crear videojuegos más inmersivos, se han visto otros tipos de aplicaciones muy útiles en muchos otros campos. Estas tecnologías están apuntando a cambios importantes en la forma de relacionarnos de manera no presencial, en campos como el diseño de objetos y renders en 3D, en la forma de consumir contenido y sobre todo, en la forma de trabajar de manera remota, teniendo la posibilidad de crearnos un escritorio totalmente flexible y adaptable a cualquier situación.</p>
             </article>
             <article id="va">
                 <h1>Vehículos Autónomos</h1>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris non magna a eros aliquet auctor. Nullam tempor mauris eget massa consequat facilisis. Quisque suscipit erat augue, a interdum ipsum rutrum vitae. Proin luctus tortor at elementum tincidunt. Etiam vestibulum, erat at vehicula vehicula, tortor nisi faucibus ante, non scelerisque nunc dolor sed tortor. Nulla facilisi. Donec tristique cursus risus feugiat fringilla. Sed pulvinar sollicitudin faucibus. Etiam interdum enim et velit facilisis aliquam. Sed pellentesque, quam vel commodo luctus, nibh risus auctor nunc, at volutpat metus arcu nec risus. In ullamcorper quis nisi sed porta. Ut id pharetra urna, nec viverra nibh. Mauris velit dolor, consequat eu sapien pharetra, lobortis porta dolor. Etiam dignissim nibh at consequat porta. Etiam pellentesque pulvinar purus. Fusce consectetur et sapien non tincidunt.
-
-                Suspendisse vestibulum risus et maximus dignissim. Vivamus iaculis, dui a venenatis luctus, leo urna tempor dui, quis finibus eros nibh in ante. Nullam ac varius neque. Proin ac mollis felis, sit amet finibus eros. Donec et elementum orci, vel tempor erat. Proin sed erat at turpis consectetur facilisis sed ut lectus. Praesent rutrum nec enim non mattis. Donec est purus, consequat et neque eget, sodales auctor purus. Aenean eu diam luctus, tincidunt justo ut, convallis est. Fusce turpis ipsum, viverra eu turpis a, aliquam vulputate risus. Morbi interdum tincidunt ante sit amet posuere. Mauris rutrum augue non libero aliquet pharetra. </p>
+                <p>Un vehículo autónomo es un vehículo capaz de imitar las capacidades humanas de manejo y control además de percibir su entorno y poder así actuar en consecuencia del mismo. Esto facilitaría a las personas el poder ir de un sitio a otro sin necesidad de coger el volante o de estar atento a sus alrededores, es decir, es como si el coche se condujese por sí mismo.</p>
+                <p>Esto se puede lograr gracias a las cámaras y sensores integrados en el vehículo que le permiten detectar objetos y hacer recorridos de manera bastante segura. Los sensores son lo suficientemente rápidos para poder actuar en situaciones imprevistas, por ejemplo ante un peatón que no cruza por el paso de cebra.  </p>
+                <p> Las principales ventajas de los coches autónomos frente a las personas de carne y hueso son el hecho de que nunca se despistan y no se cansan. Empresas como Google están desarrollando software para poder detectar tanto otros vehículos como usuarios por la vía. Otra empresa pionera en este sector es Tesla ya que sus últimos modelos se acercan bastante a lo que sería un coche autónomo. </p>
+                <p>Los drones autónomos son un poco diferentes ya que pueden existir dos tipos. Actualmente existen drones que son programados con un recorrido y llevan una cámara implementada, estos no tienen acoplado ningún tipo de sensor ya que el recorrido es siempre el mismo y son utilizados en seguridad.</p>
+                <p>Sin embargo existe otro tipo de drones que implementarían una tecnología aún en desarrollo. Estos drones tienen implementados varios tipos de sensores para que, al igual que los vehículos, pudiesen sustituir a una persona dirigiendolos y poder los drones solos ser capaces de realizar recorridos que no han sido programados y por tanto pueden encontrarse con imprevistos y obstáculos que detectan y superan.</p>
             </article>
             <article id="iot">
                 <h1>IoT(Internet of Things)</h1>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris non magna a eros aliquet auctor. Nullam tempor mauris eget massa consequat facilisis. Quisque suscipit erat augue, a interdum ipsum rutrum vitae. Proin luctus tortor at elementum tincidunt. Etiam vestibulum, erat at vehicula vehicula, tortor nisi faucibus ante, non scelerisque nunc dolor sed tortor. Nulla facilisi. Donec tristique cursus risus feugiat fringilla. Sed pulvinar sollicitudin faucibus. Etiam interdum enim et velit facilisis aliquam. Sed pellentesque, quam vel commodo luctus, nibh risus auctor nunc, at volutpat metus arcu nec risus. In ullamcorper quis nisi sed porta. Ut id pharetra urna, nec viverra nibh. Mauris velit dolor, consequat eu sapien pharetra, lobortis porta dolor. Etiam dignissim nibh at consequat porta. Etiam pellentesque pulvinar purus. Fusce consectetur et sapien non tincidunt.
-
-                Suspendisse vestibulum risus et maximus dignissim. Vivamus iaculis, dui a venenatis luctus, leo urna tempor dui, quis finibus eros nibh in ante. Nullam ac varius neque. Proin ac mollis felis, sit amet finibus eros. Donec et elementum orci, vel tempor erat. Proin sed erat at turpis consectetur facilisis sed ut lectus. Praesent rutrum nec enim non mattis. Donec est purus, consequat et neque eget, sodales auctor purus. Aenean eu diam luctus, tincidunt justo ut, convallis est. Fusce turpis ipsum, viverra eu turpis a, aliquam vulputate risus. Morbi interdum tincidunt ante sit amet posuere. Mauris rutrum augue non libero aliquet pharetra. </p>
+                <p>El IoT(Internet de las cosas) tiene un potencial ilimitado, en un futuro todos los dispositivos estarán conectados, lo que permitirá que cuando falten alimentos en el almacén o en la nevera se compre automáticamente, si te da un ataque al corazón o quedas inconsciente se llame directamente al hospital…
+Esto también conlleva una serie de problemas de privacidad, pero en un futuro se encontrará una solución.
+Otro problema que tiene el IoT actualmente es que los dispositivos más básicos que están conectados a internet suelen ser fáciles de “Hackear” y esto facilita los ataques DDoS(Distributed Denial of Service).
+Esto implica que antes de conectar todos los dispositivos, se debe mejorar su seguridad y privacidad.
+</p>
+<p>Los dispositivos IoT permitirán recopilar cantidades inmensas de datos, y esto permitirá comprender cosas que ahora son imposibles(Big Data y AI) ej:Genoma Humano enfermedades que no tienen cura…</p>
+<p>Otra de las ventajas que aportará el IoT, al estar todo conectado los coches, los semáforos, se podrá hacer un estudio mucho más profundo que el actual sobre el tráfico y las congestiones de las carreteras y así solucionar uno de los grandes problemas actuales del tráfico, mediante el (Machine Learning y la Inteligencia Artificial), actualmente usado por Amazon para gestionar sus pedidos.
+</p>
+<p>El IoT mejorará mucho el rendimiento y la eficiencia de muchas cosas que actualmente es muy complicado de mejorar pero también conlleva muchos riesgos de privacidad y seguridad.
+</p>
             </article>
         </section>
         <aside>
             <figure>
                 <img src="PUBLIC/VirtualBoy.jpg" alt="VirtualBoy">
                 <figcaption>Fig.1 - VirtualBoy de Nintendo</figcaption>
+            </figure>
+            <figure>
+                <img src="PUBLIC/Oculus.jpg" alt="Oculus Rift">
+                <figcaption>Fig.2 - Oculus Rift Development Kit 1</figcaption>
+            </figure>
+            <figure>
+                <img src="PUBLIC/Controller.jpg" alt="Oculus Rift">
+                <figcaption>Fig.3 - Oculus Rift Controller</figcaption>
+            </figure>
+            <figure>
+                <img src="PUBLIC/rift2.jpg" alt="Oculus Quest 2">
+                <figcaption>Fig.4 - Oculus Quest 2</figcaption>
             </figure>
 
         </aside>
