--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- para los iconos de Linkedin... -->
         <meta charset="UTF-8" >
         <meta name="author" content="Javier García T.">
+         <script src="JS/principal.js"></script>
         <style>
         </style>
         <base href=""> <!-- especifica la dirección URL base que se utilizará para todas las direcciones URL relativas -->
