--- a/noticiasrel.html
+++ b/noticiasrel.html
@@ -56,6 +56,12 @@ Esto implica que antes de conectar todos los dispositivos, se debe mejorar su se
 <p>El IoT mejorará mucho el rendimiento y la eficiencia de muchas cosas que actualmente es muy complicado de mejorar pero también conlleva muchos riesgos de privacidad y seguridad.
 </p>
             </article>
+            <h2>Referencias</h2>
+            <ol>
+                <li><a target="_blank" href="https://www.clarin.com/viva/impacta-tecnologia-cerebro_0_BytjXjDCb.html#:~:text=En%20este%20sentido%2C%20la%20tecnolog%C3%ADa,otros%20est%C3%ADmulos%20que%20nos%20rodean.&text=A%20su%20vez%2C%20esta%20demanda,la%20creatividad%20y%20el%20bienestar.">www.clarin.com</a></li>
+                <li><a target="_blank" href="https://www.motor.es/que-es/coches-autonomos">www.motor.es</a></li>
+                <li><a target="_blank" href="https://www.oculus.com/?locale=es_ES">www.oculus.com</a></li>
+            </ol>
         </section>
         <aside>
             <figure>
