Sesion js funcionando en firefox ubuntu

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
             <li>Registrase</li>
         </ul>
         <section >
-            <form id="submit">
+            <form id="submit" action="index.html">
                 <label for="nom">Nombre</label><br>
                 <input required="required" type="text" id="nom" name="nom" placeholder="Nombre"><br>
                 <label for="ema">Email</label><br>
