--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                 <a class="active" href="index.html">Inicio</a>
                 <a href="noticiasrel.html">Noticias relacionadas</a>
                 <a href="aboutme.html">Sobre mí</a>
-                <a  href="login.html">Registrarse</a>
+                <a id="changeCont" href="login.html">Registrarse</a>
             </nav>
+         <script src="JS/cookie.js"></script>
         </header>
         <div class="content">
             <section>
