--- a/aboutme.html
+++ b/aboutme.html
@@ -21,8 +21,9 @@
                 <a href="index.html">Inicio</a>
                 <a href="noticiasrel.html">Noticias relacionadas</a>
                 <a class="active" href="aboutme.html">Sobre mí</a>
-                <a href="login.html">Registrarse</a>
+                <a id="changeCont" href="login.html">Registrarse</a>
             </nav>
+         <script src="JS/cookie.js"></script>
         </header>
         <!-- Breadcurmb -->
         <ul class="breadcrumb">
