--- a/noticiasrel.html
+++ b/noticiasrel.html
@@ -21,8 +21,9 @@
                 <a href="index.html">Inicio</a>
                 <a class="active" href="noticiasrel.html">Noticias relacionadas</a>
                 <a href="aboutme.html">Sobre mí</a>
-                <a  href="login.html">Registrarse</a>
+                <a id="changeCont" href="login.html">Registrarse</a>
             </nav>
+         <script src="JS/cookie.js"></script>
         </header>
         <ul class="breadcrumb">
             <li><a href="index.html">Inicio</a></li>
