--- a/aboutme.html
+++ b/aboutme.html
@@ -39,8 +39,9 @@
             <h1>Sobre mí</h1>
             <p>Hola, soy Javier García. Técnico Superior en Administración de Sistemas Informáticos en Red y estudiante de Ingeniería Informática.</p>
             <br/>
-            <p>Me gusta todo lo relacionado con la tecnología y también el deporte, practico natación y estoy en el equipo Máster del club de natación Madrid Moscardó.</p>
+            <p>Me gusta todo lo relacionado con la tecnología.</p>
             <p>También me gusta el software libre y Linux, suelo probar distintas distribuciones de linux, actualmente uso KDE neon, que es como Kubuntu(Ubuntu con KDE) pero con KDE más actualizado.</p>
+            <p>También practico deporte, estoy en el equipo Máster del club de natación Madrid Moscardó.</p>
         </section>
         <aside>
             <h1>Información Básica</h1>
