--- a/noticiasrel.html
+++ b/noticiasrel.html
@@ -23,7 +23,7 @@
                 <a href="aboutme.html">Sobre mí</a>
                 <a id="changeCont" href="login.html">Registrarse</a>
             </nav>
-         <script src="JS/cookie.js"></script>
+            <script src="JS/cookie.js"></script>
         </header>
         <ul class="breadcrumb">
             <li><a href="index.html">Inicio</a></li>
@@ -43,25 +43,30 @@
                 <p> Las principales ventajas de los coches autónomos frente a las personas de carne y hueso son el hecho de que nunca se despistan y no se cansan. Empresas como Google están desarrollando software para poder detectar tanto otros vehículos como usuarios por la vía. Otra empresa pionera en este sector es Tesla ya que sus últimos modelos se acercan bastante a lo que sería un coche autónomo. </p>
                 <p>Los drones autónomos son un poco diferentes ya que pueden existir dos tipos. Actualmente existen drones que son programados con un recorrido y llevan una cámara implementada, estos no tienen acoplado ningún tipo de sensor ya que el recorrido es siempre el mismo y son utilizados en seguridad.</p>
                 <p>Sin embargo existe otro tipo de drones que implementarían una tecnología aún en desarrollo. Estos drones tienen implementados varios tipos de sensores para que, al igual que los vehículos, pudiesen sustituir a una persona dirigiendolos y poder los drones solos ser capaces de realizar recorridos que no han sido programados y por tanto pueden encontrarse con imprevistos y obstáculos que detectan y superan.</p>
+                <video controls>
+                    <source src="PUBLIC/drones.mp4" type="video/mp4">
+                    Your browser does not support HTML video.
+                </video>
             </article>
             <article id="iot">
                 <h1>IoT(Internet of Things)</h1>
                 <p>El IoT(Internet de las cosas) tiene un potencial ilimitado, en un futuro todos los dispositivos estarán conectados, lo que permitirá que cuando falten alimentos en el almacén o en la nevera se compre automáticamente, si te da un ataque al corazón o quedas inconsciente se llame directamente al hospital…
-Esto también conlleva una serie de problemas de privacidad, pero en un futuro se encontrará una solución.
-Otro problema que tiene el IoT actualmente es que los dispositivos más básicos que están conectados a internet suelen ser fáciles de “Hackear” y esto facilita los ataques DDoS(Distributed Denial of Service).
-Esto implica que antes de conectar todos los dispositivos, se debe mejorar su seguridad y privacidad.
-</p>
-<p>Los dispositivos IoT permitirán recopilar cantidades inmensas de datos, y esto permitirá comprender cosas que ahora son imposibles(Big Data y AI) ej:Genoma Humano enfermedades que no tienen cura…</p>
-<p>Otra de las ventajas que aportará el IoT, al estar todo conectado los coches, los semáforos, se podrá hacer un estudio mucho más profundo que el actual sobre el tráfico y las congestiones de las carreteras y así solucionar uno de los grandes problemas actuales del tráfico, mediante el (Machine Learning y la Inteligencia Artificial), actualmente usado por Amazon para gestionar sus pedidos.
-</p>
-<p>El IoT mejorará mucho el rendimiento y la eficiencia de muchas cosas que actualmente es muy complicado de mejorar pero también conlleva muchos riesgos de privacidad y seguridad.
-</p>
+                Esto también conlleva una serie de problemas de privacidad, pero en un futuro se encontrará una solución.
+                Otro problema que tiene el IoT actualmente es que los dispositivos más básicos que están conectados a internet suelen ser fáciles de “Hackear” y esto facilita los ataques DDoS(Distributed Denial of Service).
+                Esto implica que antes de conectar todos los dispositivos, se debe mejorar su seguridad y privacidad.
+                </p>
+                <p>Los dispositivos IoT permitirán recopilar cantidades inmensas de datos, y esto permitirá comprender cosas que ahora son imposibles(Big Data y AI) ej:Genoma Humano enfermedades que no tienen cura…</p>
+                <p>Otra de las ventajas que aportará el IoT, al estar todo conectado los coches, los semáforos, se podrá hacer un estudio mucho más profundo que el actual sobre el tráfico y las congestiones de las carreteras y así solucionar uno de los grandes problemas actuales del tráfico, mediante el (Machine Learning y la Inteligencia Artificial), actualmente usado por Amazon para gestionar sus pedidos.
+                </p>
+                <p>El IoT mejorará mucho el rendimiento y la eficiencia de muchas cosas que actualmente es muy complicado de mejorar pero también conlleva muchos riesgos de privacidad y seguridad.
+                </p>
             </article>
             <h2>Referencias</h2>
             <ol>
                 <li><a target="_blank" href="https://www.clarin.com/viva/impacta-tecnologia-cerebro_0_BytjXjDCb.html#:~:text=En%20este%20sentido%2C%20la%20tecnolog%C3%ADa,otros%20est%C3%ADmulos%20que%20nos%20rodean.&text=A%20su%20vez%2C%20esta%20demanda,la%20creatividad%20y%20el%20bienestar.">www.clarin.com</a></li>
                 <li><a target="_blank" href="https://www.motor.es/que-es/coches-autonomos">www.motor.es</a></li>
                 <li><a target="_blank" href="https://www.oculus.com/?locale=es_ES">www.oculus.com</a></li>
+                <li><a target="_blank" href="https://www.youtube.com/watch?v=w2itwFJCgFQ">https://www.youtube.com/watch?v=w2itwFJCgFQ</a></li>
             </ol>
         </section>
         <aside>
