--- a/aboutme.html
+++ b/aboutme.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html> <!-- Codificación html -->
 <html>
     <head>
-        <script>
-        </script>
         <link rel="stylesheet" href="CSS/principal.css"> <!-- Tipo de archivo y url -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- para los iconos de Linkedin... -->
         <meta charset="UTF-8" >
         <meta name="author" content="Javier García T.">
-        <style>
-        </style>
         <base href=""> <!-- especifica la dirección URL base que se utilizará para todas las direcciones URL relativas -->
         <title>El Mundo que viene</title>
     </head>
@@ -23,13 +19,14 @@
                 <a class="active" href="aboutme.html">Sobre mí</a>
                 <a id="changeCont" href="login.html">Registrarse</a>
             </nav>
-         <script src="JS/cookie.js"></script>
+            <script src="JS/cookie.js"></script>
         </header>
         <!-- Breadcurmb -->
         <ul class="breadcrumb">
             <li><a href="index.html">Inicio</a></li>
             <li>Sobre mí</li>
         </ul>
+        <!-- Imagen de perfil -->
         <section class="profile">
             <img src="PUBLIC/picture.png" alt="Profile" >
             <h1>Javier García Taboada</h1>
@@ -43,57 +40,61 @@
             <p>También me gusta el software libre y Linux, suelo probar distintas distribuciones de linux, actualmente uso KDE neon, que es como Kubuntu(Ubuntu con KDE) pero con KDE más actualizado.</p>
             <p>También practico deporte, estoy en el equipo Máster del club de natación Madrid Moscardó.</p>
         </section>
+        <!-- Contenido a la derecha de la página -->
         <aside>
             <h1>Información Básica</h1>
-<table>
-<tbody>
-  <tr>
-    <td>EDAD:</td>
-    <td>21</td>
-  </tr>
-  <tr>
-    <td>EMAIL:</td>
-    <td>holajao23@gmail.com</td>
-  </tr>
-  <tr>
-    <td>DIRECCIÓN: &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</td>
-    <td>Madrid, España</td>
-  </tr>
-  <tr>
-    <td>IDIOMAS:</td>
-    <td>Español, Inglés</td>
-  </tr>
-</tbody>
-</table>
+            <!-- Tabla con información básica... -->
+            <table>
+                <tbody>
+                    <tr>
+                        <td>EDAD:</td>
+                        <td>21</td>
+                    </tr>
+                    <tr>
+                        <td>EMAIL:</td>
+                        <td>holajao23@gmail.com</td>
+                    </tr>
+                    <tr>
+                        <td>DIRECCIÓN: &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</td>
+                        <td>Madrid, España</td>
+                    </tr>
+                    <tr>
+                        <td>IDIOMAS:</td>
+                        <td>Español, Inglés</td>
+                    </tr>
+                </tbody>
+            </table>
         </aside>
 
+        <!-- Gráficos para las habilidades -->
         <div class="clear"></div>
-            <section>
-                <h1>Habilidades</h1>
-                <p>HTML</p>
-<div class="container">
-  <div class="skills html">80%</div>
-</div>
+        <section>
+            <h1>Habilidades</h1>
+            <p>HTML</p>
+            <div class="container">
+                <div class="skills html">80%</div>
+            </div>
 
-<p>CSS</p>
-<div class="container">
-  <div class="skills css">80%</div>
-</div>
+            <p>CSS</p>
+            <div class="container">
+                <div class="skills css">80%</div>
+            </div>
 
-<p>JavaScript</p>
-<div class="container">
-  <div class="skills js">45%</div>
-</div>
+            <p>JavaScript</p>
+            <div class="container">
+                <div class="skills js">45%</div>
+            </div>
 
-<p>PHP</p>
-<div class="container">
-  <div class="skills php">60%</div>
-</div>
-<p>MySql</p>
-<div class="container">
-  <div class="skills mysql">60%</div>
-</div>
-            </section>
+            <p>PHP</p>
+            <div class="container">
+                <div class="skills php">60%</div>
+            </div>
+            <p>MySql</p>
+            <div class="container">
+                <div class="skills mysql">60%</div>
+            </div>
+        </section>
+        <!-- pie de página -->
         <footer>
             <div class="justify">
                 <h6>Créditos</h6>
